# dmpr

./: .gitignore  .travis.yml  README.rst  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg
.circleci/: config.yml
_modules/: index.html
_modules/dmpr/: dmp.html  model.html
_sources/: design.rst.txt
_sources/api/: dmpr.rst.txt
api/: dmpr.um.html
conda/: dev-environment-py2.7.yml  dev-environment.yml  meta.yaml
dmpr/: __init__.py  base.py  cli.py  dmp.py  dmponline.py  model.py  pkg_info.py
dmpr/mom/: model.py
dmpr/um/: model.py
docs/: Makefile  conf.py  design.rst  index.rst  requirements-rtd.txt
docs/_build/html/: .buildinfo  design.html  genindex.html  index.html
docs/_build/html/_modules/dmpr/: base.html
docs/_build/html/_modules/dmpr/um/: model.html
docs/_build/html/api/: dmpr.html  modules.html
docs/api/: dmpr.um.rst  modules.rst
test/: conftest.py  test_dmpr.py
test/lis/sample/: LIS_HIST_200210291430.d01.nc  LIS_HIST_200210291500.d01.nc  LIS_HIST_200211012330.d01.nc
test/mom/: test_mom.py
test/mom/sample/: config.yaml  data_table  diag_table  field_table  input.nml  logfile.000000.out  mom.out  ocean_daily.nc  ocean_daily_1980_01.nc  ocean_scalar.nc  stocks.out  time_stamp.out
test/um/: test_um.py
test/um/sample/: SUBMIT
